# multitool-CLI-utility-repo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: copy_tool.h  hash_tool.h  move_tool.h  remove_tool.h  search_tool.h  sha256.h  stats_tool.h  tree_tool.h
src/: copy_tool.cpp  hash_tool.cpp  main.cpp  move_tool.cpp  remove_tool.cpp  search_tool.cpp  sha256.cpp  stats_tool.cpp  tree_tool.cpp
tests/: CMakeLists.txt  basic_test.cpp  copy_test.cpp  hash_test.cpp  move_test.cpp  remove_test.cpp  search_test.cpp  stats_test.cpp  tree_test.cpp
tests/manual_test/: file2.txt
tests/manual_test/backup/: file1.txt
